--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "electron .",
     "postinstall": "electron-builder install-app-deps",
-    "dist": "build"
+    "dist": "build",
+    "preinstall": "yarn config set msvs_version 2015 --global; yarn config set python 2.7;"
   },
   "license": "MIT",
   "dependencies": {
