--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "gdal": "0.10.1"
+    "gdal-next": "2.5.0"
   },
   "devDependencies": {
     "electron": "10.1.6",
